# Luxoft_C--

./: C-003.pptx  Dockerfile  README.md  build_ws.sh  run_ws.sh
labs/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
labs/lab1/: CMakeLists.txt  main.cpp  quadratic_equation.cpp  quadratic_equation.h  quadratic_equation_test.cpp
labs/lab2/: CMakeLists.txt  main.cpp  split.cpp  split.h  split_test.cpp
labs/lab3/: CMakeLists.txt  complex_number.cpp  complex_number.h  complex_number_test.cpp  main.cpp
labs/lab4/: CMakeLists.txt  linked_list.cpp  linked_list.h  linked_list_test.cpp  main.cpp
labs/lab5/: CMakeLists.txt  main.cpp  object.cpp  object.h  object_test.cpp
labs/lab6/: CMakeLists.txt  array.cpp  array.h  array_test.cpp  main.cpp
labs/lab7/: CMakeLists.txt  animal.cpp  animal.h  animal_counter.cpp  animal_counter.h  animal_factory.h  animal_test.cpp  home_animal_factory.cpp  home_animal_factory.h  main.cpp  wild_animal_factory.cpp  wild_animal_factory.h
labs/lab8/: CMakeLists.txt  main.cpp  stack.h  stack_test.cpp
labs/lab9/: stack.h  stack_test.cpp
whiteboard/: animals.cpp  assert.cpp  casting.cpp  const.cpp  construct_destruct_order.cpp  default_constructor.cpp  delete_functions_in_class.cpp  diamond.cpp  error_handling.cpp  exceptions.cpp  inclass.cpp  lambdas.cpp  namespace2.cpp  namespaces.cpp  oop.cpp  pizza.cpp  placement_new.cpp  poiner_to_function.cpp  raii.cpp  redefine_new.cpp  smart_pointers.cpp  static_object_in_a_func.cpp  string.cpp  templates.cpp  whiteboard.cpp
whiteboard/namespaces/: file1.cpp  main.cpp
whiteboard/pimpl/: object.cpp  object.h
whiteboard/template/: file.h  file1.cpp  file2.cpp  function_template.cpp  main.cpp  object.cpp  object.h  object.impl.h  object2.cpp  variadic_template.cpp
